tdf#89616 Find toolbar: Activate search arrows when input has text

Not only when input is modfified

Change-Id: Ic6b94dbfba34ec6eb88c9c385aaa36a7bac19de7